# TelegramBotSupport

./: main.py  pyproject.toml
alembic/: env.py
app/: __init__.py
app/admin/: crud.py  handler.py
app/echo/: crud.py  handler.py
app/start/: crud.py  handler.py
core/: config.py  settings.py
core/models/: __init__.py  ai.py  ai_message.py  base.py  db_helper.py  message.py  phrase.py  start.py  topic.py  user.py
services/: ai.py  clear_topic.py  crud.py
